# ixy

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  README.md  TODO.md  build.rs
.github/workflows/: docs.yml  publish.yml  test.yml
examples/: generics.rs
src/: grid.rs  index.rs  int.rs  internal.rs  layout.rs  lib.rs  ops.rs  pos.rs  rect.rs  size.rs
src/grid/: array.rs  impls.rs  iter.rs  linear.rs  slice.rs  vec.rs  view.rs
src/layout/: block.rs  col_major.rs  row_major.rs
src/ops/: distance.rs  line.rs
