[package]
name = "ixy"
edition = "2024"
license = "MIT"

description = "A minimal, no-std compatible crate for 2D integer geometry"
repository = "https://github.com/crates-lurey-io/ixy"
version = "0.6.0-alpha.3"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
module_name_repetitions = "allow"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
cargo-semver-checks = { version = "0.48.0", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }

[package.metadata.docs.rs]
all-features = true

[dependencies]
