[package]
name = "ixy"
edition = "2024"
license = "MIT OR Apache-2.0"

description = "A minimal, no-std compatible crate for 2D integer geometry"
repository = "https://github.com/crates-lurey-io/ixy"
homepage = "https://github.com/crates-lurey-io/ixy"
documentation = "https://docs.rs/ixy"
version = "0.6.0-alpha.3"
rust-version = "1.87"
authors = ["Matan Lurey <matan@lurey.org>"]
keywords = ["2d", "geometry", "integer", "grid", "position"]
categories = ["game-development", "mathematics", "no-std"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
module_name_repetitions = "allow"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
cargo-hack = { version = "0.6.0", locked = true }
cargo-semver-checks = { version = "0.48.0", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
